--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Brady Snowden</h1>
     <p>
       [Self introduction]
     </p>
     <p>
       [Major and other information]
+      I am a Computer Science major graduating in December 2018.
     </p>
     <p>
       [Other things]
@@ -22,6 +23,15 @@
     <ul>
       <li>IBM/Rational</li>
       <li>WPI</li>
+    </ul>
+    <p>
+      Known Languages
+    </p>
+    <ul>
+      <li>C</li>
+      <li>Java</li>
+      <li>Python</li>
+      <li>SQL</li>
     </ul>
   </body>
 </html>
