Added dropdown button in Experience section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <hr>
-    <h2>About me</h2>
+    <h2 style="padding-left: 12px">About me</h2>
     <p style="text-align: center; font-size: 20px;">I am a WPI junior studying Computer Science. If you want to learn more, scroll over the images below</p>
     <br><br>
     <div class="centre">
@@ -50,10 +50,10 @@
     </div>
     <br>
     <br>
-    <h2>Experience</h2>
+    <h2 style="padding-left: 12px">Experience</h2>
     <div class="centre">
-      <div style="width: 50%;">
-        <div style="padding-right: 25px; padding-left: 50px;">
+      <div style="width: 30%;">
+        <div style="padding-right: 25px; padding-left: 30px;">
           <h3>Work Experience</h3>
           <p style="font-size: 18px; text-align: center;">
             On campus I worked with the Athletic Department to help facilitate sporting events (the students in the bright green shirts catching foul soccer balls). I currently work on-call for a cybersecurity company in Newport Beach, CA. I enjoy this field of work
@@ -61,8 +61,28 @@
           </p>
         </div>
       </div>
-      <div style="width: 50%;">
-        <div style="padding-right: 50px; padding-left: 25px">
+
+      <div style="width: 30%;">
+        <div>
+          <h3>CS Classes</h3>
+
+          <div class="dropdown" style="padding-left: 36%;">
+            <button class="dropbutton">Dropdown</button>
+            <div class="dropdown-content">
+              <h4>CS 1101</h4>
+              <h4>CS 2102</h4>
+              <h4>CS 2022</h4>
+              <h4>CS 2303</h4>
+              <h4>CS 2011</h4>
+              <h4>CS 2223</h4>
+              <h4>CS 3133</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div style="width: 40%;">
+        <div style="padding-right: 30px; padding-left: 25px">
           <h3>Programming Experience</h3>
           <div class="centre">
             <div style="width: 30%;">
