Finished transfer of old project to fork

--- a/index.html
+++ b/index.html
@@ -2,26 +2,33 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo">
+    <link rel="stylesheet" type="text/css" href="A1styles.css">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
-
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
+    <div class="module" id="page-content">
+      <div class="header" id="self-header">Information about Adam Camilli</div>
+      <div class="content" id="self-content">
+	<p>
+	  [Self introduction]
+	</p>
+	<p>
+	  [Major and other information]
+	</p>
+	<p>
+	  [Other things]
+	</p>
+      </div>
+      <div class="header" id="exp-header">Experience</div>
+      <div class="content" id="exp-content">
+	<p>
+	  Working experience
+	</p>
+	<ul>
+	  <li>IBM/Rational</li>
+	  <li>WPI</li>
+	</ul>
+      </div>
+    </div>
   </body>
 </html>
