reformated layout of info on page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="scripts/main.js"></script>
   </head>
   <body>
-    <div>
+    <div class="content">
         <h1>Information about Skyler Kim</h1>
         <p>
           My name is Skyler Kim. <br/>I'm a junior majoring in CS. <br/>I have a little experience with ASP .NET, but I would like to learn more. 
@@ -21,24 +21,49 @@
     
         <h2>Experience</h2>
         <p>
-          Working experience
-          <ul>
-            <li>Bank of Hawaii: Work with eSolutions team on web applications for company intranet.</li>
-            <li>SA for WPI: SA for CS1004, CS2301, CS2202</li>
-          </ul>
-        </p>
-        
-        <h2>4000 Level Classes</h2>
-        <p>
-          <ul>
-            <li>CS4432: Database 2</li>
-            <li>CS4341: Intro to AI</li>
-            <li>CS4533: Compilers (Currently taking)</li>
-            <li>CS4241: Webware (Currently taking)</li>
-            <li>CS4210: Analysis of Algorithms (Currently taking)</li>
-          </ul>
+          <table>
+            <tbody>
+              <tr>
+                <td>
+                    <h4>Working experience:</h4>
+                    <ul>
+                      <li>Bank of Hawaii: Work with eSolutions team on web applications for company intranet.</li>
+                      <li>SA for WPI: SA for CS1004, CS2301, CS2202</li>
+                    </ul>
+                    <h4>Language Experience:</h4>
+                    <ul>
+                       <li>Java: a lot</li>
+                      <li>Python: a lot</li>
+                      <li>HTML: some</li>
+                      <li>CSS: some</li>
+                      <li>JavaScript: some</li>
+                      <li>Unit Testing: some</li>
+                      <li>Ruby: None</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Previous Classes</h4>
+                    <ul>
+                      <li>CS4432</li>
+                      <li>CS4341</li>
+                      <li>CS3133</li>
+                      <li>CS3013</li>
+                      <li>CS3733</li>
+                      <li>CS3431</li>
+                      <li>CS3043</li>
+                      <li>CS2303</li>
+                      <li>CS2011</li>
+                      <li>CS2223</li>
+                      <li>CS2022</li>
+                      <li>CS2102</li>
+                      <li>CS1101</li>
+                    </ul>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </p>
     </div>
-    <div id="footerImage" onclick="changeMode()" value=0></div>
+    <div id="footerImage" onclick="changeMode();" value=0></div>
   </body>
 </html>
