--- a/index.html
+++ b/index.html
@@ -4,20 +4,43 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Deets on James Corse</h1>
     <p>
-      [Self introduction]
+      Hi! My name is James and I am from California.
     </p>
     <p>
-      [Major and other information]
+      I am a Computer Science major and a member of the Class of 2019
     </p>
     <p>
-      [Other things]
+      Some of my favorite past-times are slack-lining, rock climbing,
+      and playing Pokemon Go.
+    </p>
+    <img src="koda.jpg" alt="Koda" style="width:500px;height:600px;">
+    <p>
+      This is my dog, Koda!
     </p>
 
-    <h2>Experience</h2>
+    <h2>My Life's Results (so far)</h2>
     <p>
-      Working experience
+      HTML: None
+    </p>
+    <p>
+      CSS: None
+    </p>
+    <p>
+      Java: Some
+    </p>
+    <p>
+      Javascript: None
+    </p>
+    <p>
+      Ruby: None
+    </p>
+    <p>
+      Python: Some
+    </p>
+    <p>
+      Unit Testing: None
     </p>
     <ul>
       <li>IBM/Rational</li>
