fix bug for chrome browsers.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/light.css" id="mode">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="scripts/main.js"></script>
   </head>
   <body>
@@ -42,7 +43,7 @@
                     </ul>
                 </td>
                 <td>
-                    <h4>Previous Classes</h4>
+                    <h4>Previous Classes:</h4>
                     <ul>
                       <li>CS4432</li>
                       <li>CS4341</li>
@@ -64,6 +65,6 @@
           </table>
         </p>
     </div>
-    <div id="footerImage" onclick="changeMode();" value=0></div>
+    <div id="footerImage" value=0></div>
   </body>
 </html>
