--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesA1.css">
+    <link rel="stylesheet" type="text/css" href="stylesA1.css">
 </head>
 <body>
     <h1>Information about Krysta Murdy</h1>
