--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             designing, implementing, and testing STEAM (science, technology, engineering, art, mathematics) resources to engage families and school groups in the
             museum’s galleries.
         </li>
-        <img src="MoLProj.JPG" alt="Developed Museum Activity" style="width:400px; height:300px;" class="center" />
+        <img src="https://rawgit.com/krm1347/a1-gettingstarted/master/MoLProj.JPG" alt="Developed Museum Activity" style="width:400px; height:300px;" class="center" />
     </ul>
     <p>
         Previous Programming Classes at WPI
