--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
     <h1>Information about Krysta Murdy</h1>
-    <img src="Skydiving.JPG" alt="Skydiving in Key West" style="width:600px; height:450px;" class="center" />
+    <img src="https://rawgit.com/krm1347/a1-gettingstarted/master/Skydiving.JPG" alt="Skydiving in Key West" style="width:600px; height:450px;" class="center" />
     <p>
         Hey, I'm Krysta, graduating class of 2019 at WPI! I grew up in Meriden, CT with two older brothers and a partner in crime (aka my mom). Both of my brothers graduated from WPI, the same
         university where I study now, and have been my inspiration to pursue engineering. Between the houses of my parents and my siblings, we have 8 cats,
         so I guess that means I may be a crazy cat lady in training.
     </p>
-    <img src="kittyCollage.JPG" alt="All Eight Cats" style="width:400px; height:400px;" class="center" />
+    <img src="https://rawgit.com/krm1347/a1-gettingstarted/master/kittyCollage.JPG" alt="All Eight Cats" style="width:400px; height:400px;" class="center" />
     <p>
         At WPI, I am pursuing a double major in electrical and computer engineering and computer science with a minor in music. In order to complete my degree,
         I am working with a team to develop a modular system to make off-road vehicles autonomous. My role in this project is to use data fusion and processing
@@ -24,7 +24,7 @@
         best aspects. Recently, I have started exploring other ways to experience music, including competing with the WPI ballroom dance team. My passion to travel,
         is also changing and expanding as I experience more and more cultures and adventures. Just last summer I visited 15 countries, and that is just the beginning!
     </p>
-    <img src="SwissAlps.JPG" alt="Sunny Swiss Alps" style="width:500px; height:375px;" class="center" />
+    <img src="https://rawgit.com/krm1347/a1-gettingstarted/master/SwissAlps.JPG" alt="Sunny Swiss Alps" style="width:500px; height:375px;" class="center" />
 
     <h2>Experience</h2>
     <p>
@@ -36,7 +36,7 @@
             hydrographic survey, the process of mapping the ocean floor. My primary work with this company focused on designing and implementing filters for topographic
             laser data, specifically LiDAR, which allows the 3D point cloud data to be more efficiently processed and displayed in real-time.
         </li>
-        <img src="PointCloudBasic.JPG" alt="LiDAR Point Cloud Data" style="width:524px; height:300px;" class="center" />
+        <img src="https://rawgit.com/krm1347/a1-gettingstarted/master/PointCloudBasic.JPG" alt="LiDAR Point Cloud Data" style="width:524px; height:300px;" class="center" />
         <li>
             The previous summer, I worked with a small team as an unpaid consultant for the Museum of London Docklands in Canary Wharf, London. Our work focused on
             designing, implementing, and testing STEAM (science, technology, engineering, art, mathematics) resources to engage families and school groups in the
