Rearranged elements in index.html

--- a/index.html
+++ b/index.html
@@ -62,27 +62,8 @@
         </div>
       </div>
 
-      <div style="width: 30%;">
-        <div>
-          <h3>CS Classes</h3>
-
-          <div class="dropdown" style="padding-left: 36%;">
-            <button class="dropbutton">Dropdown</button>
-            <div class="dropdown-content">
-              <h4>CS 1101</h4>
-              <h4>CS 2102</h4>
-              <h4>CS 2022</h4>
-              <h4>CS 2303</h4>
-              <h4>CS 2011</h4>
-              <h4>CS 2223</h4>
-              <h4>CS 3133</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div style="width: 40%;">
-        <div style="padding-right: 30px; padding-left: 25px">
+      <div style="width: 55%;">
+        <div style="padding-right: 25px; padding-left: 25px">
           <h3>Programming Experience</h3>
           <div class="centre">
             <div style="width: 30%;">
@@ -155,6 +136,25 @@
           </div>
         </div>
       </div>
+
+      <div style="width: 15%;">
+        <divdiv style="padding-right: 25px;">
+          <h3 style="line-height:50%">CS Classes</h3>
+          <div class="dropdown" style="display: table; margin: 0 auto;">
+            <button class="dropbutton">Dropdown</button>
+            <div class="dropdown-content">
+              <h4>CS 1101</h4>
+              <h4>CS 2102</h4>
+              <h4>CS 2022</h4>
+              <h4>CS 2303</h4>
+              <h4>CS 2011</h4>
+              <h4>CS 2223</h4>
+              <h4>CS 3133</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <div>
 </body>
