Changed background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
-    <body>
+    <body style="background-color:ivory;">
       <center>
         <font face="georgia">
           <h1>Information about Andrew DeRusha</h1>
