--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
     <body style="background-color:ivory;">
       <center>
-        <font face="georgia">
+        <font face="georgia" color="rebeccapurple">
           <h1>Information about Andrew DeRusha</h1>
           <h3>Hi everyone, I'm Andrew. I'm a junior CS major.</h3>
         </font>
@@ -24,7 +24,7 @@
           </p>
         </font>
 
-        <font face="georgia">
+        <font face="georgia" color="rebeccapurple">
           <h2>Experience</h2>
         </font>
       </center>
@@ -32,7 +32,7 @@
         <p style="margin-left:5em; margin-right: 5em">
           My work experience involves a summer internship working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
         </p>
-        <font face="georgia">
+        <font face="georgia" color="rebeccapurple">
           <h2 style="margin-left:5em; margin-right: 5em">
             Related Courses
           </h2>
