--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="css/page.css" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
