--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
   </head>
   <!-- <body style="background-color:powderblue;"> -->
-    <body background="space.jpg">
+    <style type="text/css">
+      body{
+        background-image: url("space.jpg");
+      }
+    </style>
+    
     <h1 align="center">Information about Meghana Bhatia</h1>
     <h2>Basic Information</h2>
     <p>
