--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
-  <!-- <body style="background-color:powderblue;"> -->
-    <style type="text/css">
-      body{
-        background-image: url("space.jpg");
-      }
-    </style>
-    
+   <body style="background-color:powderblue;">
     <h1 align="center">Information about Meghana Bhatia</h1>
     <h2>Basic Information</h2>
     <p>
