--- a/index.html
+++ b/index.html
@@ -1,32 +1,104 @@
-<html lang="en">
-  <head>
-    <title>CS4241 Assignment 1</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about Jerry Assan</h1>
-    <p>
-      WPI class of 2020
-    </p>
-    <p>
-      Major in CS, minor in DS
-    </p>
-    <p>
-      i have taken java, c and sql courses as well as algorithms.
-    </p>
+<!DOCTYPE html>
+<html>
+<title>GETTING STARTED</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <h2>Experience</h2>
-    <p>
-      CSS: some
-      Java: some
-      JavaScript: some
-      Ruby: none
-      Python: none
-      unit testing: some
-    </p>
+
+
+
+<style>
+
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+    body, html {
+        height: 100%;
+        color: #777;
+        line-height: 1.8;
+    }
+    /* Create a Parallax Effect */
+    .bgimg-a ,.bgimg-b, .bgimg-c{
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+
+    .bgimg-a {
+        background-image: url("background/IMG_5771.jpg");
+        min-height: 400px;
+    }
+
+
+    .bgimg-b {
+        background-image: url("background/IMG_5976.jpg");
+        min-height: 400px;
+    }
+
+
+    .bgimg-c {
+        background-image: url("background/IMG_5983.jpg");
+        min-height: 400px;
+    }
+
+
+
+
+
+</style>
+  <body>
+
+  <div class="bgimg-a w3-display-container">
+      <div class="w3-display-middle" >
+          <span class="w3-xxlarge w3-text-white w3-wide">About Jerry</span>
+      </div>
+  </div>
+
+ <div class="w3-center">
+    <h1>
+      WPI class of 2020
+    </h1>
+    <h5>
+      Major in CS, minor in DS
+    </h5>
+    <h6>
+      i have taken java, c and sql courses as well as algorithms.
+    </h6>
+ </div>
+
+  <div class="bgimg-b w3-display-container">
+      <div class="w3-display-middle" >
+          <span class="w3-xxlarge w3-text-white w3-wide">Experience</span>
+      </div>
+  </div>
+<div class="w3-center">
+    <p>CSS: some</p>
+    <p>Java: some</p>
+    <p>JavaScript: some</p>
+    <p>Ruby: none </p>
+    <p>Python: none</p>
+    <p>unit testing: some</p>
+
+</div>
+  <div class="bgimg-c w3-display-container">
+      <div class="w3-display-middle" >
+          <span class="w3-xxlarge w3-text-white w3-wide">Courses taken</span>
+      </div>
+  </div>
+ <div class="w3-center">
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+        <p>CS1101 - Introduction to Program Design</p>
+        <p>CS2102 - Object-Oriented Design Concepts</p>
+        <p>CS2303 - System Programming Concepts</p>
+        <p>CS3041 - Human Computer Interaction</p>
+        <p>CS3431 - Database Systems I</p>
+        <p>CS2223 - Algorithms</p>
+        <p>CS3733 - Software Engineering</p>
+        <p>CS3133 - Foundations of Computer Science</p>
+        <p>CS4120 - ANALYSIS OF ALGORITHMS</p>
     </ul>
+ </div>
   </body>
 </html>
