--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
   </head>
    <!-- <body style="background-color:powderblue;"> -->
-    <body style="background-image:url('Space.jpg')">
+    <body style="background-image: url('Space.jpg');">
+
     <h1 align="center">Information about Meghana Bhatia</h1>
     <h2>Basic Information</h2>
     <p>
