Edited index.html and added main.css

--- a/index.html
+++ b/index.html
@@ -2,36 +2,33 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
     <h1>Zhung Keung Moo Feng (Erick)</h1>
-    <p>
+    <h3>
         Class of 2019 | Major: Computer Science | Minor: Data Science
-    </p>
+    </h3>
     <h2>CS courses</h2>
-    <ul>
-        <li>CS 1101</li>
-        <li>CS 2102</li>
-        <li>CS 2303</li>
-        <li>CS 2011</li>
-        <li>CS 2223</li>
-        <li>CS 3013</li>
-        <li>CS 3733</li>
-        <li>CS 3516</li>
-        <li>CS 3133</li>
-        <li>CS 3431</li>
-        <li>CS 3041</li>
-        <li>CS 3043</li>
-    </ul>
+    <div class="flex-row"><p>CS 1101</p></div>
+    <div class="flex-row"><p>CS 2102</p></div>
+    <div class="flex-row"><p>CS 2303</p></div>
+    <div class="flex-row"><p>CS 2011</p></div>
+    <div class="flex-row"><p>CS 2223</p></div>
+    <div class="flex-row"><p>CS 3013</p></div>
+    <div class="flex-row"><p>CS 3733</p></div>
+    <div class="flex-row"><p>CS 3516</p></div>
+    <div class="flex-row"><p>CS 3133</p></div>
+    <div class="flex-row"><p>CS 3431</p></div>
+    <div class="flex-row"><p>CS 3041</p></div>
+    <div class="flex-row"><p>CS 3043</p></div>
     <h2>Experience</h2>
-    <ul>
-        <li>HTML: some</li>
-        <li>CSS: some</li>
-        <li>Java: a lot</li>
-        <li>Javascript: a lot</li>
-        <li>Ruby: none</li>
-        <li>Python: some</li>
-        <li>Unit Testing: some</li>
-    </ul>
+    <div class="flex-row"><p>HTML: some</p></div>
+    <div class="flex-row"><p>CSS: some</p></div>
+    <div class="flex-row"><p>Java: a lot</p></div>
+    <div class="flex-row"><p>Javascript: a lot</p></div>
+    <div class="flex-row"><p>Ruby: none</p></div>
+    <div class="flex-row"><p>Python: some</p></div>
+    <div class="flex-row"><p>Unit Testing: some</p></div>
   </body>
 </html>
