--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
   </head>
   <body>
@@ -10,9 +11,15 @@
     </p>
     <p>
       I have taken a plethora of Computer Science courses, of which include:
-	  Mobile and Ubiquiotus Computing, Algorithms, Operating Systems, Databases,
-	  Discrete Mathematics, Foundations of Computer Science, and
-	  Software Engineering
+	  <ul>
+	  <li>Mobile and Ubiquiotus Computing </li> 
+	  <li>Algorithms </li> 
+	  <li>Operating Systems </li> 
+	  <li>Databases </li>
+	  <li>Discrete Mathematics </li> 
+	  <li>Foundations of Computer Science </li>
+	  <li>And finally Software Engineering! </li>
+	  </ul>
     </p>
     <p>
       Experience:
