--- a/index.html
+++ b/index.html
@@ -4,20 +4,37 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Dimitrios Tsiakmakis</h1>
     <p>
-      [Self introduction]
+      My name is Dimitrios Tsiakmakis. I am 21 years old and I am from Greece. I am also Half-British.
+      I love sports, video games and hanging out with friends. I've decided to come to WPI ever since I attended a summer program here.
+      My academic interests are computer science, interactive media and business.
     </p>
     <p>
-      [Major and other information]
+      Major : Computer Science
     </p>
     <p>
-      [Other things]
+      Previous CS courses I have taken :
+      CS 1004
+      CS 1101
+      CS 2102
+      CS 2223
+      CS 2301
+      CS 3013
+      CS 3043
+      CS 3733
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      Experiences with technologies:
+      HTML: none
+      CSS : some
+      Java : a lot of experience
+      JavaScript : none
+      Ruby : none
+      Python : some
+      unit testing : none
     </p>
     <ul>
       <li>IBM/Rational</li>
