--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 
 
     .bgimg-a {
-        background-image: url("background/IMG_5771.jpg");
+        background-image: url("IMG_5771.jpg");
         min-height: 400px;
     }
 
 
     .bgimg-b {
-        background-image: url("background/IMG_5976.jpg");
+        background-image: url("IMG_5976.jpg");
         min-height: 400px;
     }
 
 
     .bgimg-c {
-        background-image: url("background/IMG_5983.jpg");
+        background-image: url("IMG_5983.jpg");
         min-height: 400px;
     }
 
