--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     </p>
     <p>
       I have taken a plethora of Computer Science courses, of which include:
+	  </p>
 	  <ul>
-	  <li>Mobile and Ubiquiotus Computing </li> 
+	  <li>Mobile and Ubiquitous Computing </li> 
 	  <li>Algorithms </li> 
 	  <li>Operating Systems </li> 
 	  <li>Databases </li>
@@ -20,25 +21,26 @@
 	  <li>Foundations of Computer Science </li>
 	  <li>And finally Software Engineering! </li>
 	  </ul>
-    </p>
     <p>
       Experience:
-	  HTML: Some
-	  CSS: Some
-	  JavaScript: Some
-	  Java: A Lot
-	  Ruby: None
-	  Python: Some
-	  Unit Testing: None
-    </p>
+      </p>
+      <ul>
+	  <li>HTML: Some</li>
+	  <li>CSS: Some</li>
+	  <li>JavaScript: Some</li>
+	  <li>Java: A Lot</li>
+	  <li>Ruby: None</li>
+	  <li>Python: Some</li>
+	  <li>Unit Testing: None</li>
+	  </ul>
 
     <h2>Experience</h2>
     <p>
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
       <li>WPI</li>
+      <li>SizzleScene</li>
     </ul>
   </body>
 </html>
