--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </p>
     <ul>
       <li>WPI</li>
-      <li>SizzleScene</li>
+      <li>SizzleScene, a TrampleZone application</li>
     </ul>
   </body>
 </html>
