--- a/index.html
+++ b/index.html
@@ -3,40 +3,40 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <link href="./styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <meta charset="utf-8">
   </head>
 
   <body>
     <h1>Information about Cormac Lynch-Collier</h1>
     <p>
-      Hi, my name is Cormac Lynch-Collier. I'm a junior at WPI (class of 2020) and currently pursuing my bachelors in
+      I'm a junior at WPI (class of 2020) and currently pursuing my bachelors in
       Computer Science and a minor in History.
     </p>
 
-    <h2>Experience</h2>
     <p>
-      WPI CS Courses
+      In my spare time I like to play and watch soccer. I also like to spend time in the outdoors hiking or taking
+      pictures.
     </p>
-    <div id="classes">
+
+    <h2>Experience</h2>
+    <h3>
+      WPI CS Courses
+    </h3>
       <ul class="class-col">
         <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_1101" target="_blank">CS 1101</a></li>
-      </ul>
-      <ul class="class-col">
         <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2102" target="_blank">CS 2102</a></li>
         <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2303" target="_blank">CS 2303</a></li>
         <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2011" target="_blank">CS 2011</a></li>
         <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2022" target="_blank">CS 2022</a></li>
         <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2233" target="_blank">CS 2233</a></li>
-      </ul>
-      <ul class="class-col">
         <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733" target="_blank">CS 3733</a></li>
         <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3133" target="_blank">CS 3133</a></li>
         <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3041" target="_blank">CS 3041</a></li>
       </ul>
-    </div>
-    <p>
+    <h3>
       Technologies/Methods
-    </p>
+    </h3>
     <div id="technologies">
       <div class="tech-yellow"><h2 class="tech-title">HTML</h2>
         <p class="tech-experience">I have some experience with HTML from building websites on my own.</p>
@@ -62,11 +62,15 @@
         <p class="tech-experience">I have some experience with Unit Testing through projects I have worked on.</p>
       </div>
     </div>
-    <p>
+    <h3>
       Working experience
-    </p>
+    </h3>
     <ul>
-      <li>Cogo Labs</li>
+      <li>
+        Cogo Labs -- I created two websites while working for Cogo. The first was the corporate website for an incubating
+        company, Minerva Analytics. The second, a directory of accelerators with scalable database and profile page model.
+        <a href="https://www.cogolabs.com/" target="_blank">More info on Cogo Labs.</a>
+      </li>
     </ul>
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
