--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     .bgimg-a {
         background-image: url("IMG_5771.jpg");
-        min-height: 400px;
+        min-height: 600px;
     }
 
 
@@ -64,7 +64,7 @@
       Major in CS, minor in DS
     </h5>
     <h6>
-      i have taken java, c and sql courses as well as algorithms.
+      A foodie at heart.
     </h6>
  </div>
 
@@ -78,7 +78,7 @@
     <p>Java: some</p>
     <p>JavaScript: some</p>
     <p>Ruby: none </p>
-    <p>Python: none</p>
+    <p>Python: some</p>
     <p>unit testing: some</p>
 
 </div>
