--- a/index.html
+++ b/index.html
@@ -2,26 +2,68 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel='stylesheet' href='css/styles.css'>
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
+    <div class="main">
+      <nav>
+          <ul class="nav">
+            <li class="nav-options">
+              <a href="#experience-section">EXPERIENCE</a>
+            </li>
+            <li class="nav-options">
+              <a href="#courses-section">PREVIOUS COURSES</a>
+            </li>
+            <li class="nav-options">
+             <a href="#about-section">ABOUT ME</a>
+            </li>
+          </ul>
+      </nav>
+    </div>
+    <br>
+    <br>
 
-    <h2>Experience</h2>
+    <h1 style="text-align:center">AMANDA PENNIE</h1>
+    <h2 style="text-align:center">CLASS OF 2019</h2>
+    <br>
+    <br>
+
+    <h2 id="about-section">About Me</h2>
     <p>
-      Working experience
+      I'm a Senior at WPI majoring in Computer Science with a Data Science minor. In my free time, I enjoy hiking, travelling, playing with my dog and trying new foods. 
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    
+    <h2 id="courses-section">Previous Courses</h2>
+    <p>
+      Previous Computer Science courses that I have taken are: 
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Introduction to Artificial Intelligence</li>
+      <li>Social Implications of Information Processing</li>
+      <li>Operating Systems</li>
+      <li>Introduction to Machine Organization and Assembly</li>
+      <li>Foundations of Computer Science</li>
+    </ul>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <h2 id="experience-section">Working Experience</h2>
+    <ul>
+      <li>HTML - a lot</li>
+      <li>CSS - a lot</li>
+      <li>Java - a lot</li>
+      <li>JavaScript - a lot</li>
+      <li>Ruby - some</li>
+      <li>Python - some</li>
+      <li>unit testing - some</li>
     </ul>
   </body>
 </html>
