--- a/index.html
+++ b/index.html
@@ -124,40 +124,40 @@
     <p class='row-title'>html</p>
     <p></p>
     <p></p>
-    <p>x</p>
+    <p class='row-title'>x</p>
   </div>
 
   <div class='row'>
     <p class='row-title'>css</p>
     <p></p>
     <p></p>
-    <p>x</p>
+    <p class='row-title'>x</p>
   </div>
 
   <div class='row'>
     <p class='row-title'>java</p>
     <p></p>
     <p></p>
-    <p>x</p>
+    <p class='row-title'>x</p>
   </div>
 
   <div class='row'>
     <p class='row-title'>javascript</p>
     <p></p>
-    <p>x</p>
+    <p class='row-title'>x</p>
     <p></p>
   </div>
 
   <div class='row'>
     <p class='row-title'>ruby</p>
-    <p>x</p>
+    <p class='row-title'>x</p>
     <p></p>
     <p></p>
   </div>
 
   <div class='row'>
     <p class='row-title'>python</p>
-    <p>x</p>
+    <p class='row-title'>x</p>
     <p></p>
     <p></p>
   </div>
@@ -165,14 +165,14 @@
   <div class='row'>
     <p class='row-title'>unit testing</p>
     <p></p>
-    <p>x</p>
+    <p class='row-title'>x</p>
     <p></p>
   </div>
 
   <div class='row'>
     <p class='row-title'>react</p>
     <p></p>
-    <p>x</p>
+    <p class='row-title'>x</p>
     <p></p>
   </div>
 
@@ -188,20 +188,20 @@
   <div class="row">
    <p><a class="row-title" href='https://www.udemy.com/the-complete-web-developer-in-2018/learn/v4/overview' target='_blank'>zero to mastery udemy course</a></p>
    <p></p>
-   <p>x</p>
+   <p class='row-title'>x</p>
    <p></p>
  </div>
 
  <div class="row">
   <p class="row-title">cracking the coding interview</p>
   <p></p>
-  <p>x</p>
+  <p class='row-title'>x</p>
   <p></p>
 </div>
 
 <div class="row">
   <p><a href='http://eloquentjavascript.net/' target='_blank' class='row-title'>eloquent javascript</a></p>
-  <p>x</p>
+  <p class='row-title'>x</p>
   <p></p>
   <p></p>
 </div>
