Adding back in image

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 	Mine was...not surprising. Same for my "time listened" for Spotify 2017...
 	</p>
 	
-	<!-- <p>Here is a some of my sisters in Alpha Gam and me. I'm the fourth from the left!
+	<p>Here is a some of my sisters in Alpha Gam and me. I'm the fourth from the left!
 	And yes, the bridge was very steep and I was terrified of falling down</p>
-	<img src="public/img/AGD_image.png" alt="Some of my sisters and I" width=600"> -->
+	<img src="AGD_image.png" alt="Some of my sisters and I" width=600">
 
     <h2>Experience</h2>
     <h4>
