Rainbow bottom bar, additional information about myself

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       Hi I'm Paul-Henry Schoenhagen!
     </p>
     <p>
-      Class of 2019. Majoring in Computer Science, Minoring In Philosophy.
+      Class of 2019. I am Majoring in Computer Science, and Minoring In Philosophy.
     </p>
     <p><img id="waveImg" src="img/wave.gif"></p>
     </div>
@@ -44,6 +44,7 @@
     <br>
     <strong>Unit Testing:</strong> Some
     <br>
+    I have been lucky enough to travel to China to work on a company's website.
     </p>
     </div>   
       
@@ -66,11 +67,19 @@
     <br>
     </p> 
     </div>
+      
+    <div id="info">
+    <h3>More Information about me:</h3>
+    <p>
+    I was born and raised in Cleveland. My favorite teams are the Cleveland Browns, Indians, Cavaliers, and whatever team Lebron is on. I'm a hard bandwagon fan, sue me. I like long walks on the beach, traveling to foreign countries, and eating food. I'm officially a (volunteer assistant) coach at WPI. Some of my favorite people include Dave Chappelle, Donald Glover, and of course Lebron James. I'm extremely happy to have my first assignment of the term finished.
+    </p> 
+    </div>    
     <div id="buttons">
     <button type="button" onclick="showExp()" >EXPERIENCE</button>
-    <button type="button" onclick="showCourse()" >COURSES</button>  
+    <button type="button" onclick="showCourse()" >COURSES</button>
+    <button type="button" onclick="showInfo()" >ABOUT ME</button>          
     </div>
-
+      <div id="filler" onclick="random"></div>
   </body>
 </div>
 </html>
